[tool.poetry]
name = "vt-grass-bot"
version = "0.1.0"
description = ""
authors = ["SSSKrut"]
license = "WTFPL"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pytelegrambotapi = "^4.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"